--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,56 +2,68 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/constraint_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/transparent"
     tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/textViewExplanation"
-        style="@style/MaterialAlertDialog.Material3.Title.Text"
+        style="@android:style/Widget.Material.TextView"
         android:layout_width="300dp"
-        android:layout_height="300dp"
+        android:layout_height="350dp"
+        android:layout_margin="8dp"
+        android:fontFamily="@font/roboto"
+        android:gravity="center_horizontal|center_vertical"
+        android:hint="@string/explanation"
         android:padding="12dp"
         android:paddingLeft="6dp"
         android:paddingTop="6dp"
         android:paddingRight="6dp"
         android:paddingBottom="6dp"
-        android:text="@string/explanation"
-        android:textAlignment="center"
         android:textSize="24sp"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.25" />
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayout"
         android:layout_width="wrap_content"
-        android:layout_height="61dp"
+        android:layout_height="wrap_content"
         app:endIconMode="clear_text"
-        app:layout_constraintBottom_toBottomOf="@+id/button"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewExplanation">
+        app:layout_constraintTop_toBottomOf="@+id/textViewExplanation"
+        app:layout_constraintVertical_bias="0.41000003">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editTextNumCodes"
             android:layout_width="190dp"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/roboto"
             android:hint="@string/hint_num_codes"
-            android:textColorHint="#546E7A" />
+            android:inputType="number"
+            android:maxLength="3" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#7288C5"
+        android:layout_width="150dp"
+        android:layout_height="70dp"
         android:elevation="8dp"
+        android:fontFamily="@font/roboto"
         android:text="@string/button_text"
         android:textAlignment="center"
-        android:textSize="20sp"
+        android:textColor="@android:color/primary_text_dark"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
