--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="primary">#6493AF</color>
+    <color name="nightPrimary">#2C4657</color>
+    <color name="secondary">#4E616C</color>
+    <color name="secondaryVariant">#8094A0</color>
 </resources>
