--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -36,55 +37,55 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextDate"
-        app:layout_constraintVertical_bias="0.0" >
+        app:layout_constraintVertical_bias="0.0">
 
     </androidx.recyclerview.widget.RecyclerView>
 
     <EditText
         android:id="@+id/editTextNumCode"
-        style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
+        style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
         android:ems="10"
-        android:inputType="number"
+        android:fontFamily="@font/roboto"
         android:hint="@string/input_num_code"
+        android:importantForAutofill="no"
+        android:inputType="number"
         android:minHeight="48dp"
         android:textAlignment="center"
         android:textColorHint="#A1887F"
         android:textSize="20sp"
         android:textStyle="bold|italic"
-        android:fontFamily="@font/roboto"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.7"
-        android:importantForAutofill="no" />
+        app:layout_constraintVertical_bias="0.7" />
 
     <EditText
         android:id="@+id/editTextCash"
-        style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
+        style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="36dp"
         android:ems="10"
+        android:fontFamily="@font/roboto"
         android:hint="@string/input_cash"
+        android:importantForAutofill="no"
+        android:inputType="numberDecimal"
         android:minHeight="48dp"
         android:textAlignment="center"
         android:textColorHint="#A1887F"
         android:textSize="20sp"
         android:textStyle="bold|italic"
-        android:fontFamily="@font/roboto"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.7"
-        android:importantForAutofill="no"
-        android:inputType="numberDecimal"/>
+        app:layout_constraintVertical_bias="0.7" />
 
     <Button
         android:id="@+id/buttonNewItem"
-        style="@style/Widget.Material3.Button.TextButton"
+        style="@style/Widget.Material3.Button.TonalButton"
         android:layout_width="140dp"
         android:layout_height="68dp"
         android:layout_marginStart="32dp"
@@ -96,7 +97,7 @@
 
     <Button
         android:id="@+id/buttonSave"
-        style="@style/Widget.Material3.Button.TextButton"
+        style="@style/Widget.Material3.Button.TonalButton"
         android:layout_width="140dp"
         android:layout_height="68dp"
         android:layout_marginEnd="32dp"
