--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -10,7 +10,7 @@
 
     <EditText
         android:id="@+id/editTextDate"
-        style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
+        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -20,7 +20,6 @@
         android:inputType="numberDecimal"
         android:minHeight="48dp"
         android:textAlignment="center"
-        android:textColorHint="#A1887F"
         android:textSize="20sp"
         android:textStyle="bold|italic"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,13 +30,11 @@
         android:id="@+id/add_recycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextDate"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintTop_toBottomOf="@+id/editTextDate">
 
     </androidx.recyclerview.widget.RecyclerView>
 
@@ -46,7 +43,8 @@
         style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginBottom="16dp"
         android:ems="10"
         android:fontFamily="@font/roboto"
         android:hint="@string/input_num_code"
@@ -54,20 +52,18 @@
         android:inputType="number"
         android:minHeight="48dp"
         android:textAlignment="center"
-        android:textColorHint="#A1887F"
         android:textSize="20sp"
         android:textStyle="bold|italic"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.7" />
+        app:layout_constraintBottom_toTopOf="@+id/buttonNewItem"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/editTextCash"
-        style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense"
+        style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="36dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="16dp"
         android:ems="10"
         android:fontFamily="@font/roboto"
         android:hint="@string/input_cash"
@@ -75,21 +71,17 @@
         android:inputType="numberDecimal"
         android:minHeight="48dp"
         android:textAlignment="center"
-        android:textColorHint="#A1887F"
         android:textSize="20sp"
         android:textStyle="bold|italic"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.7" />
+        app:layout_constraintBottom_toTopOf="@+id/buttonSave"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/buttonNewItem"
-        style="@style/Widget.Material3.Button.TonalButton"
         android:layout_width="140dp"
         android:layout_height="68dp"
         android:layout_marginStart="32dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="24dp"
         android:text="@string/new_item_button_text"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -97,11 +89,10 @@
 
     <Button
         android:id="@+id/buttonSave"
-        style="@style/Widget.Material3.Button.TonalButton"
         android:layout_width="140dp"
         android:layout_height="68dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="24dp"
         android:text="@string/save_button_text"
         android:textSize="20sp"
         android:textStyle="italic"
