--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
         android:layout_marginBottom="32dp"
         android:clickable="true"
         android:contentDescription="@string/add_button_text"
-        android:focusable="true"
+        android:focusable="auto"
         android:foreground="@android:drawable/ic_input_add"
         android:foregroundTint="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
